# flask-edm-example

./: .envrc  README.md  pyproject.toml  wsgi.py
flask_with_json_logging/: __init__.py  bootstrap.py  bus.py  config.py
flask_with_json_logging/adaptors/: logging.py
flask_with_json_logging/api/: __init__.py
flask_with_json_logging/commands/: __init__.py
flask_with_json_logging/events/: __init__.py
flask_with_json_logging/service_layer/: handlers.py  messagebus.py  unit_of_work.py
