[tool.poetry]
name = "flask-with-json-logging"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <pyunghyuk@likelion.net>"]
readme = "README.md"
packages = [{include = "flask_with_json_logging"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
